--- a/.github/workflows/wheels.yaml
+++ b/.github/workflows/wheels.yaml
@@ -1,6 +1,10 @@
 name: Build wheels
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+  release:
+    types:
+      - published
 
 jobs:
   build_wheels:
