--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,8 @@ markers = ["slow", "installation_test"]
 requires = ["setuptools>=42.0.0",
             "setuptools_scm",
             "wheel",
-            "oldest-supported-numpy",
-            "cython==3.0.2",
+            "numpy>=2.0",
+            "cython>=3.0.2",
             "extension-helpers==1.*"]
 build-backend = 'setuptools.build_meta'
 
